docs/k8s/Automated Service Mesh with Istio/02-05/hostname-virtualservice-canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hostname
        port:
          number: 80
        subset: v1
      weight: 90
    - destination:
        host: hostname
        subset: v2
      weight: 10
